service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: django
# spec:
#   selector:
#     app.kubernetes.io/name: MyApp
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8000

apiVersion: v1
kind: Service
metadata:
  name: my-service
  labels:
    app: django
spec:
  type: NodePort
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
